more short coding

--- a/short/reac-lite.html
+++ b/short/reac-lite.html
@@ -1,5 +1,4 @@
 <body><input type="text" id="q"><input type="button" value="Go" id="c"><script>
-c.addEventListener("click",()=>{let a=[],s=q.value,i=0,k=["あかさたなはまやらわがざだばぱゃ"
-,"いきしちにひみりぎじぢびぴ","うくすつぬふむゆるをぐずづっぶぷゅ","えけせてねへめれげぜでべぺ"
-,"おこそとのほもよろんごぞどぼぽょ"],j=(e)=>{~k[e-1].indexOf(s.charAt(i))?a+=e:j
-(e+1);};for(i;i<s.length;i++){j(1)}});</script></body>
+c.addEventListener("click",()=>{let a=[],s=q.value,i=x=0,j=e=>{~
+"あかさたなはまやらわがざだばぱゃ0いきしちにひみりぎじぢびぴ0うくすつぬふむゆるをぐずづっぶぷゅ0えけせてねへめれげぜでべぺ0おこそとのほもよろんごぞどぼぽょ"
+.split(0)[e-1].indexOf(s[i])?a+=e:j(e+1)},f=e=>{};for(i;i<s.length;i++)j(1);+a;console.log(a);});</script></body>
