add index and text

--- a/WebAnime/OP/index.html
+++ b/WebAnime/OP/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="scss/annime.css"/>
   </head>
   <body>
-    <div>
-      <h1>起床</h1>
+    <div id="root">
+      <h1>TITLE</h1>
+      <div class="main">
+        <h2>INDEX</h2>
+        <p>DATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATA</p>
+      </div>
     </div>
   </body>
 </html>
