--- a/WebAnime/OP/index.html
+++ b/WebAnime/OP/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <link rel="stylesheet" href="scss/main.css"/>
-    <link rel="stylesheet" href="scss/annime.css"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="scss/main.css">
+    <link rel="stylesheet" href="scss/annime.css">
   </head>
   <body>
     <div id="root">
