--- a/WebAnime/OP/index.html
+++ b/WebAnime/OP/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="scss/main.css">
-    <link rel="stylesheet" href="scss/annime.css">
+    <link rel="stylesheet" href="scss/anime.css">
   </head>
   <body>
     <div id="root">
