--- a/WebAnime/tiktok/index.html
+++ b/WebAnime/tiktok/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
   </head>
-  <body> 
+  <body>
+    <div class="container"> 
+      <div class="row justify-content-center">
+        <div class="col-12 col-sm-8 col-md-4">
+          <h1>Hello</h1>
+        </div>
+      </div>
+    </div>
     <script src="./js/bootstrap.bundle.min.js"> </script>
   </body>
 </html>
