add title ..etc

--- a/WebAnime/tiktok/index.html
+++ b/WebAnime/tiktok/index.html
@@ -4,12 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
-    <div class="container"> 
+    <div class="container-fluid">
       <div class="row justify-content-center">
-        <div class="col-12 col-sm-8 col-md-4">
-          <h1>Hello</h1>
+        <div class="col-12 col-sm-8 col-lg-4 bg-light border-start border-end border-secodary bg-bottom">
+          <nav class="navbar navber-expand-lg navbar-dark bg-dark my-4">
+            <div class="container-fluid"><a class="navbar-brand h1">TikTok</a></div>
+          </nav>
+          <div class="px-3">
+            <h4>発覚</h4>
+            <p class="text-wrap mb-0">いつものように何気なくスマホを手に取る。何も考えなくともTikTokに手が行く。いつものように開く</p>
+          </div>
         </div>
       </div>
     </div>
