--- a/WebAnime/tiktok/index.html
+++ b/WebAnime/tiktok/index.html
@@ -9,13 +9,14 @@
   <body>
     <div class="container-fluid">
       <div class="row justify-content-center">
-        <div class="col-12 col-sm-8 col-lg-4 bg-light border-start border-end border-secodary bg-bottom">
+        <div class="col-12 col-sm-8 col-lg-4 bg-light border-start border-end border-secodary bg-bottom__0">
           <nav class="navbar navber-expand-lg navbar-dark bg-dark my-4">
             <div class="container-fluid"><a class="navbar-brand h1">TikTok</a></div>
           </nav>
           <div class="px-3">
             <h4>発覚</h4>
-            <p class="text-wrap mb-0">いつものように何気なくスマホを手に取る。何も考えなくともTikTokに手が行く。いつものように開く</p>
+            <p class="text-wrap">いつものように何気なくスマホを手に取る。何も考えなくともTikTokに手が行く。</p>
+            <div class="text-center"><img src="./img/tiktok-logo.png" class="img-fluid logo-width__20 loading"></div>
           </div>
         </div>
       </div>
