--- a/WebAnime/tiktok/index.html
+++ b/WebAnime/tiktok/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/anime.css">
   </head>
   <body>
     <div class="container-fluid">
@@ -16,11 +17,13 @@
           <div class="px-3">
             <h4>発覚</h4>
             <p class="text-wrap">いつものように何気なくスマホを手に取る。何も考えなくともTikTokに手が行く。</p>
-            <div class="text-center"><img src="./img/tiktok-logo.png" class="img-fluid logo-width__20 loading"></div>
+            <div class="text-center"><img src="./img/tiktok-logo.png" class="img-fluid logo-width__20 d-none tiktok-start"></div>
           </div>
         </div>
       </div>
     </div>
+    <script src="./js/jquery-3.6.0.min.js"> </script>
     <script src="./js/bootstrap.bundle.min.js"> </script>
+    <script src="./js/main.js"> </script>
   </body>
 </html>
