--- a/Ghost/index.html
+++ b/Ghost/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="icon" href="./favicon.png" type="image/png" sizes="16*16">
   </head>
   <body> 
     <div class="container-fluid">
       <div class="row justify-content-center"> 
-        <div class="col-12 col-sm-8 col-lg-4 text-wrap">
-          <div class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid"> <a class="navbar-brand">Reac</a></div>
-          </div>
-          <p class="fs-1">どうもみなさんこんにちは。このサイトの運用者の#####です</p>
+        <div class="col-12 col-sm-8 col-lg-4 text-break text-center">
+          <p class="fs-1 mt-5">404</p>
+          <p class="fs-2">Not Found</p>
+          <button id="trap" type="button" class="btn btn-outline-secondary">Return</button>
         </div>
       </div>
     </div>
