--- a/Ghost/index.html
+++ b/Ghost/index.html
@@ -4,19 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="icon" href="./favicon.png" type="image/png" sizes="16*16">
+    <!--favion original => from pixabay.com-->
+    <link rel="icon" href="./favicon.png" type="image/png">
+    <title>TikTok</title>
   </head>
   <body> 
     <div class="container-fluid">
       <div class="row justify-content-center"> 
         <div class="col-12 col-sm-8 col-lg-4 text-break text-center">
-          <p class="fs-1 mt-5">404</p>
-          <p class="fs-2">Not Found</p>
-          <button id="trap" type="button" class="btn btn-outline-secondary">Return</button>
+          <p class="fs-1 mt-5">503</p>
+          <p class="fs-2">Service Unavailable</p>
+          <button id="trap" type="button" class="btn btn-outline-secondary">Retry</button>
         </div>
       </div>
     </div>
-    <script src="./js/jquery-3.6.0.min.js"> </script>
+    <!--script(src="./js/jquery-3.6.0.min.js") -->
     <script src="./js/main.js"> </script>
   </body>
 </html>
