--- a/pbt/index.html
+++ b/pbt/index.html
@@ -3,11 +3,22 @@
   <head> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/anime.css">
     <title>PBT </title>
   </head>
-  <body> 
-    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin> </script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin> </script>
+  <body class="bg-secondary text-center">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div id="root" class="col-12 col-sm-10 col-md-8 col-lg-6 border-start border-end border-success text-light bg-dark">
+          <div id="game"></div>
+          <div id="text"></div>
+        </div>
+      </div>
+    </div>
+    <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin> </script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin> </script>
     <script src="src/game.js"> </script>
   </body>
 </html>
