add bootstrap classes

--- a/pbt/index.html
+++ b/pbt/index.html
@@ -12,13 +12,14 @@
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div id="root" class="col-12 col-sm-10 col-md-8 col-lg-6 border-start border-end border-success text-light bg-dark">
-          <div id="game"></div>
-          <div id="text"></div>
+          <div id="game" class="d-flex align-items-center justify-content-center"></div>
+          <div id="text" class="d-flex align-items-center justify-content-center"></div>
         </div>
       </div>
     </div>
     <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin> </script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin> </script>
+    <script src="src/jquery-3.6.0.min.js"> </script>
     <script src="src/game.js"> </script>
   </body>
 </html>
