--- a/pbt/index.html
+++ b/pbt/index.html
@@ -17,8 +17,8 @@
         </div>
       </div>
     </div>
-    <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin> </script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin> </script>
+    <script src="src/react.production.min.js" crossorigin> </script>
+    <script src="src/react-dom.production.min.js" crossorigin> </script>
     <script src="src/jquery-3.6.0.min.js"> </script>
     <script src="src/game.js"> </script>
   </body>
