--- a/pbt/index.html
+++ b/pbt/index.html
@@ -20,6 +20,7 @@
     <script src="src/react.production.min.js"> </script>
     <script src="src/react-dom.production.min.js"> </script>
     <script src="src/jquery-3.6.0.min.js"> </script>
+    <script src="src/template.js"></script>
     <script src="src/game.js"> </script>
   </body>
 </html>
