--- a/pbt/index.html
+++ b/pbt/index.html
@@ -17,10 +17,7 @@
         </div>
       </div>
     </div>
-    <script src="src/react.production.min.js"> </script>
-    <script src="src/react-dom.production.min.js"> </script>
-    <script src="src/jquery-3.6.0.min.js"> </script>
-    <script src="src/template.js"></script>
-    <script src="src/game.js"> </script>
+    <script src="vue/vue@2.js"></script>
+    <script src="vue/game.js"> </script>
   </body>
 </html>
