--- a/pbt/index.html
+++ b/pbt/index.html
@@ -17,7 +17,7 @@
         </div>
       </div>
     </div>
-    <script src="vue/vue@2.js"></script>
+    <script src="vue/vue@next"></script>
     <script src="vue/game.js"> </script>
   </body>
 </html>
