--- a/pbt/index.html
+++ b/pbt/index.html
@@ -13,11 +13,11 @@
       <div class="row justify-content-center">
         <div id="root" class="col-12 col-sm-10 col-md-8 col-lg-6 border-start border-end border-success text-light bg-dark">
           <div id="game" class="d-flex align-items-center justify-content-center"></div>
-          <div id="text" class="d-flex align-items-center justify-content-center"></div>
+          <div id="text" class="d-flex align-items-center justify-content-center">{{ text }}</div>
         </div>
       </div>
     </div>
-    <script src="vue/vue@next"></script>
-    <script src="vue/game.js"> </script>
+    <script src="https://unpkg.com/vue@next"></script>
+    <script src="vue/game.js"></script>
   </body>
 </html>
