--- a/pbt/index.html
+++ b/pbt/index.html
@@ -18,6 +18,6 @@
       </div>
     </div>
     <script src="https://unpkg.com/vue@next"></script>
-    <script src="vue/game.js"></script>
+    <script src="js/game.js"></script>
   </body>
 </html>
